--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -17,7 +17,29 @@
     <script src='main.js'></script>
  </head>
  <body class="bg-black font-[poppins] text-white from-[#442127] to-[#202b3e] h-screen">
-   
-    
+    <section id="Home">
+        <header class="bg-black fixed w-full">
+            <nav class=" flex justify-between items-center w-[92%] mx-auto bg-black ">
+                <div>
+                    <img class="w-16" src="logo design_✊🏻.jpeg" alt="logo for website">
+                </div>
+                <div
+                    class="md:static absolute md:min-h-fit min-h-[120vh] left-0 top-[9%] md:w-auto w-full flex item-center px-5 ">
+                    <ul class="flex  md:flex-row flex-col md:items-center md:gap-[4vw] gap-8">
+                        <li><a class="hover:text-[#fb153b] text-[#fb153b]" href="#Home">Home</a></li>
+                        <li><a class="hover:text-[#fb153b]" href="#About">About</a></li>
+                        <li><a class="hover:text-[#fb153b]" href="#Service">Service</a></li>
+                        <li><a class="hover:text-[#fb153b]" href="#Contact">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="flex items-center gap-6 ">
+                    <button class="bg-[#fb153b] text-white px-5 py-2 rounded-sm hover:bg-[#cdb2b6]">Hire me</button>
+                    <i name="menu" class="fa fa-bars text-3xl cursor-pointer md:hidden "></i>
+                </div>
+
+            </nav>
+        </header>
+
+        
  </body>
  </html>
