--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -39,7 +39,30 @@
 
             </nav>
         </header>
+<!-------------------------------------------------------------------Home------=----------------------------------------------------->
 
+<div class="flex flex-col md:flex-row items-center w-[92%] mx-auto pt-20 pb-40 gap-10">
+   
+    <div class="md:w-1/2 md:ml-4">
+      <p class="text-center md:text-left text-3xl">
+        <p class="text-center md:text-left text-3xl">HI ,I'm <span class="text-[#fb153b]">Uwineza Florence</span></p><br>
+                    <p class="text-center md:text-left text-3xl"> a Professional</p><br>
+                    <p class="text-center md:text-left text-3xl">Front end developer.</p>
+    <div class="flex justify-between flex-row px-0 py-10 gap-5 text-xl font-bold">
+        <a id="icons" class="hover:text-[#fb153b]" href="https://www.instagram.com/_uwineza_/"><i
+                class="fa-brands fa-instagram"></i></a>
+        <a id="icons" class="hover:text-[#fb153b]"
+            href="https://www.linkedin.com/in/uwineza-florence-3b9463280/"> <i
+                class="fa-brands fa-linkedin"></i></a>
+        <a id="icons" class="hover:text-[#fb153b]" href="https://github.com/uwinezaflorence20/"><i
+                class="fa-brands fa-github"></i></a>
+    </div>
+    </div>
+    <div class="md:w-1/2  h-100%] w-[80%]">
+        <img class="mx-auto md:mx-0 w-full md:w-auto max-w-xs md:max-w-none h-96 " src="home.jpeg" alt="Image">
+      </div>
+  </div>
+  
         
  </body>
  </html>
