--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -42,36 +42,39 @@
        
         
 <!-------------------------------------------------------------------Home------=----------------------------------------------------->
+<div class="flex flex-col md:flex-row items-center w-full md:w-[92%] mx-auto pt-10 md:pt-20 pb-10 md:pb-40 gap-10 ">
+    <div class="md:w-1/2 md:ml-4 pt-28  ">
+        <p class="text-center md:text-left text-3xl">
+            HI, I'm <span class="text-[#fb153b]"><br>Uwineza Florence</span>
+        </p>
+        <p class="text-center md:text-left text-3xl pt-4">a Professional</p>
+        <p class="text-center md:text-left text-3xl pt-4">Front-end developer.</p>
+        <p class="pt-6 pl-2">I Am currently attending <BR> She Can Codebootcamp</p>
+        <p class="pt-3 pl-2">FIND ME</p>
+        <div class="flex justify-center md:justify-start flex-row px-0 py-10 gap-20 text-xl font-bold">
+            <a id="icons" class="hover:text-[#fb153b]" href="https://www.instagram.com/_uwineza_/">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a id="icons" class="hover:text-[#fb153b]" href="https://www.linkedin.com/in/uwineza-florence-3b9463280/">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a id="icons" class="hover:text-[#fb153b]" href="https://github.com/uwinezaflorence20/">
+                <i class="fa-brands fa-github"></i>
+            </a>
+        </div>
+    </div>
+    <div class="md:w-1/2 h-auto w-full">
+        <img class="mx-auto md:mx-0 w-full md:w-auto max-w-xs md:max-w-none h-96" src="home.jpeg" alt="Image">
+    </div>
+</div>
 
-<div class="flex flex-col md:flex-row items-center w-[95%] mx-auto pt-20 pb-40 gap-10">
-   
-    <div class="md:w-1/2 md:ml-4">
-      <p class="text-center md:text-left text-3xl">
-        <p class="text-center md:text-left text-3xl">HI ,I'm <span class="text-[#fb153b]">Uwineza Florence</span></p><br>
-                    <p class="text-center md:text-left text-3xl"> a Professional</p><br>
-                    <p class="text-center md:text-left text-3xl">Front end developer.</p>
-    <div class="flex justify-between flex-row px-0 py-10 gap-5 text-xl font-bold">
-        <a id="icons" class="hover:text-[#fb153b]" href="https://www.instagram.com/_uwineza_/"><i
-                class="fa-brands fa-instagram"></i></a>
-        <a id="icons" class="hover:text-[#fb153b]"
-            href="https://www.linkedin.com/in/uwineza-florence-3b9463280/"> <i
-                class="fa-brands fa-linkedin"></i></a>
-        <a id="icons" class="hover:text-[#fb153b]" href="https://github.com/uwinezaflorence20/"><i
-                class="fa-brands fa-github"></i></a>
-    </div>
-    </div>
-    <div class="md:w-1/2  h-[100%] w-[100%]">
-        <img class="mx-auto md:mx-0 w-full md:w-auto max-w-xs md:max-w-none h-96 " src="home.jpeg" alt="Image">
-      </div>
-  </div>
-  
 <!------------------------------------------------------------------------About------------------------------------------------------------------>
   <section id="About">
-    <div class="flex flex-col lg:flex-row justify-around items-center mx-auto pt-10 lg:pt-28 pb-10 lg:pb-40 max-w-screen-xl">
+    <div class="flex flex-col lg:flex-row justify-around items-center  mx-auto pt-10 lg:pt-28 pb-10 lg:pb-40 max-w-screen-xl">
         <div class="w-full lg:w-[40%] h-auto lg:h-96">
             <img src="about.jpeg" alt="about me image" class="w-full h-full object-cover">
         </div>
-        <div class="w-full lg:w-[40%] pt-10 lg:pt-20">
+        <div class="w-full lg:w-[40%] pt-10 pb-10 lg:pt-20">
             <p class="text-center lg:text-left">I am a website designer from Rwanda, with a strong focus on front-end development. I love to gain new experiences and analyze and learn from my surroundings.</p>
             <p class="text-center lg:text-left pt-4">As a highly skilled and experienced computer programmer, I am passionate about writing code and developing high-quality software that meets the needs of my clients.</p>
             <p class="text-center lg:text-left pt-4">My strong background in computer science, coupled with my commitment to using the best programming practices and tools available, makes me a valuable asset to any software development team.</p>
@@ -81,7 +84,69 @@
         </div>
     </div>
 </section>
-  
+
+<!------------------------------------------------------service----------------------------------------------------------------->
+<section id="Service">
+    <div class="pt-20 pb-40 lg:pt-28 lg:pb-40 mx-auto max-w-screen-xl">
+        <h1 class="text-2xl text-center lg:text-left mb-8 flex justify-center underline decoration-[#fb153b]">What I do For My Customers</h1>
+        <div class="flex flex-col lg:flex-row justify-around items-center gap-8">
+            <div class="bg-[#fb153b] text-2xl cursor-pointer px-10 py-4 h-auto lg:h-96 flex flex-col justify-center items-center hover:bg-[#cdb2b6]">
+                <i class="fa-solid fa-code text-white text-4xl"></i>
+                <h2 class="text-white text-center pt-4">Web Design</h2>
+                <p class="text-white text-center">Frontend Developer</p>
+            </div>
+            <div class="bg-[#fb153b] text-2xl cursor-pointer px-10 py-4 h-auto lg:h-96 flex flex-col justify-center items-center hover:bg-[#cdb2b6]">
+                <i class="fa-solid fa-laptop-code text-white text-4xl"></i>
+                <h2 class="text-white text-center pt-4">Unix/Linux</h2>
+                <p class="text-white text-center">Linux Programming<br> programm</p>
+            </div>
+            <div class="bg-[#fb153b] text-2xl cursor-pointer px-10 py-4 h-auto lg:h-96 flex flex-col justify-center items-center hover:bg-[#cdb2b6]">
+                <i class="fa-solid fa-code-commit text-white text-4xl"></i>
+                <h2 class="text-white text-center pt-4">Database</h2>
+                <p class="text-white text-center">Database Manage<br>ment </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+    <!-----------------------------------contact---------------------------------->
+    <section id="Contact">
+        <div class=" flex justify-center items-center text-xl pt-0">
+            <h5>have question? <br>
+            <hr class="w- border-t-2 border-[#fb153b]">
+            <br>contact me now</h5>
+        </div>
+        <div class="form-container">
+            <div class="inputs"> 
+                <input type="text" placeholder="Your Name">
+                <input type="tel" placeholder="Your telephone">
+                <input type="" placeholder="yourname@gmail.com">
+            </div>
+            <div class="tex-area">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Idea..."></textarea>
+            </div>
+        </div>
+
+        <div>
+            <div class="flex justify-around flex-row px-0 py-10 gap-2 p-36">
+                <div>
+                    <a class="hover:text-[#fb153b] " href=""><i class="fa-brands fa-whatsapp text-xl font-bold"></i></a>
+                    <p>+250791348662</p>
+                </div>
+                <div>
+                    <a class="hover:text-[#fb153b]"
+                        href="https://www.google.com/maps/@-1.9628032,30.0908544,12z/data=!4m2!7m1!2e1?entry=ttu"><i
+                            class="fa-solid fa-location-dot text-xl font-bold"></i></a>
+                    <p>Kigali Rwanda</p>
+                </div>
+                <div>
+                    <a class="hover:text-[#fb153b]" href="https://mail.google.com/mail/u/0/#inbox?compose=new"><i
+                            class="fa-solid fa-envelope text-xl font-bold"></i></a>
+                    <p>uwinezaflorence20@gmail.com</p>
+                </div>
+            </div>
+        </div>
+    </section>
 <script>
     const navToggle = document.getElementById('navToggle');
     const navMenu = document.getElementById('navMenu');
