--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -29,6 +29,7 @@
                         <li><a class="hover:text-[#fb153b] text-[#fb153b]" href="#Home">Home</a></li>
                         <li><a class="hover:text-[#fb153b]" href="#About">About</a></li>
                         <li><a class="hover:text-[#fb153b]" href="#Service">Service</a></li>
+                        <li><a class="hover:text-[#fb153b]" href="#Service">portifolio</a></li>
                         <li><a class="hover:text-[#fb153b]" href="#Contact">Contact</a></li>
                     </ul>
                 </div>
