--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -52,7 +52,7 @@
         <p class="text-center md:text-left text-3xl pt-4">Front-end developer.</p>
         <p class="pt-6 pl-2">I Am currently attending <BR> She Can Codebootcamp</p>
         <p class="pt-3 pl-2">FIND ME</p>
-        <div class="flex justify-center md:justify-start flex-row px-0 py-10 gap-20 text-xl font-bold">
+        <div class="flex items-center-center md:justify-start flex-row px-0 py-10 gap-20 text-xl font-bold">
             <a id="icons" class="hover:text-[#fb153b]" href="https://www.instagram.com/_uwineza_/">
                 <i class="fa-brands fa-instagram"></i>
             </a>
@@ -117,16 +117,28 @@
             <hr class="w- border-t-2 border-[#fb153b]">
             <br>contact me now</h5>
         </div>
-        <div class="form-container">
-            <div class="inputs"> 
-                <input type="text" placeholder="Your Name">
-                <input type="tel" placeholder="Your telephone">
-                <input type="" placeholder="yourname@gmail.com">
+        <div class="bg-black min-h-screen md:w-[92%] mx-auto  flex justify-around items-center">
+            <div class="w-full max-w  shadow-md rounded px-8 pt-6 pb-8 mb-4">
+              <form>
+                <div class="mb-4">
+                 
+                  <input class="shadow appearance-none border rounded  bg-black w-full py-2 px-3 text-white leading-tight focus:outline-none focus:shadow-outline" id="name" type="text" placeholder="Enter your name">
+                </div>
+                <div class="mb-4">
+                  <input class="shadow appearance-none border rounded  bg-black w-full py-2 px-3 text-white leading-tight focus:outline-none focus:shadow-outline" id="email" type="email" placeholder="Enter your email">
+                </div>
+                <div class="mb-4">
+                  <input class="shadow appearance-none border rounded bg-black w-full py-2 px-3 text-white leading-tight focus:outline-none focus:shadow-outline" id="phone" type="tel" placeholder="Enter your telephone number">
+                </div>
+                <div class="mb-6">
+                  <textarea class="shadow appearance-none border rounded  bg-black w-full py-20 px-3 pt-4 text-white leading-tight focus:outline-none focus:shadow-outline" id="message" placeholder="Enter your message"></textarea>
+                </div>
+                <div class="flex items-center justify-between">
+                    <button class="bg-[#fb153b] text-white px-5 py-2 rounded-sm  hover:bg-[#cdb2b6]">Hire me</button>
+                </div>
+              </form>
             </div>
-            <div class="tex-area">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Idea..."></textarea>
-            </div>
-        </div>
+          </div>
 
         <div>
             <div class="flex justify-around flex-row px-0 py-10 gap-2 p-36">
