--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -20,11 +20,11 @@
     <section id="Home">
         <nav class="bg-black">
             <div class="flex justify-between items-center  w-full top-0 p-5 fixed font-serif z-10 bg-black text-white">
-              <div class="text-black text-2xl font-bold hover:text-[#fb153b]" font-serif">
+              <div class="text-black text-2xl font-bold hover:text-[#fb153b] font-serif">
                 <img class="w-16" src="logo design_✊🏻.jpeg" alt="logo for website">
               </div>
-              <div class="hidden md:flex space-x-4">
-                <ul class="flex md:flex-row flex-col md:items-center md:gap-[4vw] gap-8">
+              <div class="hidden md:flex space-x-2">
+                <ul class="flex md:flex-row flex-col md:items-center md:gap-[2vw] gap-8">
                   <li><a class="hover:text-[#fb153b] text-[#fb153b]" href="#Home">Home</a></li>
                   <li><a class="hover:text-[#fb153b]" href="#About">About</a></li>
                   <li><a class="hover:text-[#fb153b]" href="#Service">Service</a></li>
@@ -43,7 +43,7 @@
             </div>
           </nav>
           <div id="mobileMenu" class="md:hidden hidden  w-full py-16 ">
-            <div class="container mx-auto flex flex-col space-y-4 font-serif bg-white   fixed ">
+            <div class="container mx-auto flex flex-col space-y-4 font-serif bg-black   fixed ">
               <ul class="flex md:flex-row flex-col md:items-center md:gap-[3vw] gap-8">
                 <li><a class="hover:text-[#fb153b] text-[#fb153b]" href="#Home">Home</a></li>
                 <li><a class="hover:text-[#fb153b]" href="#About">About</a></li>
@@ -155,8 +155,8 @@
         <div>
             <div class="flex justify-around flex-row px-0 py-10 gap-2 p-36">
                 <div>
-                    <a class="hover:text-[#fb153b] " href=""><i class="fa-brands fa-whatsapp text-xl font-bold"></i></a>
-                    <p>+250791348662</p>
+                    <a class="hover:text-[#fb153b]pl-20" href=""><i class="fa-brands fa-whatsapp text-xl font-bold"></i></a>
+                    <p class="text-center">+250791348662</p>
                 </div>
                 <div>
                     <a class="hover:text-[#fb153b]"
@@ -172,7 +172,12 @@
             </div>
         </div>
     </section>
-<script >
-</script>
+    
+    <footer>
+      <div class="text-center text-2xl">
+      <p>Copyright &copy;2024; Designed by <span class="text-[#fb153b]"> Florence</span></p>
+    </div>
+  </footer>
+<script src="main.js"></script>
  </body>
  </html>
