--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -24,7 +24,7 @@
                 <img class="w-16" src="logo design_✊🏻.jpeg" alt="logo for website">
               </div>
               <div class="hidden md:flex space-x-2">
-                <ul class="flex md:flex-row flex-col md:items-center md:gap-[2vw] gap-8">
+                <ul class="flex md:flex-row flex-col md:items-center md:gap-[4vw] gap-8">
                   <li><a class="hover:text-[#fb153b] text-[#fb153b]" href="#Home">Home</a></li>
                   <li><a class="hover:text-[#fb153b]" href="#About">About</a></li>
                   <li><a class="hover:text-[#fb153b]" href="#Service">Service</a></li>
@@ -33,7 +33,7 @@
               </ul>
               </div>
               <div class="flex items-center gap-6">
-                <button class="bg-[#fb153b] text-white px-5 py-2 rounded-sm hover:bg-[#cdb2b6]">Hire me</button>
+                <a href="https://github.com/uwinezaflorence20?tab=repositories"><button class="bg-[#fb153b] text-white px-5 py-2 rounded-sm hover:bg-[#cdb2b6]">Hire me</button></a>
             </div>
               <div class="md:hidden">
                 <button id="burgerBtn" class="text-gray-400 focus:outline-none hover:text-gray-300">
@@ -123,14 +123,14 @@
 </section>
 
     <!-----------------------------------contact---------------------------------->
-    <section id="Contact">
-        <div class=" flex justify-center items-center text-xl pt-0">
+    <section id="Contact" class="pt-28">
+        <div class=" flex justify-center items-center text-xl ">
             <h5>have question? <br>
             <hr class="w- border-t-2 border-[#fb153b]">
             <br>contact me now</h5>
         </div>
-        <div class="bg-black min-h-screen md:w-[92%] mx-auto  flex justify-around items-center">
-            <div class="w-full max-w  shadow-md rounded px-8 pt-6 pb-8 mb-4">
+        <div class="bg-black min-h-screen md:w-[92%] mx-auto  flex justify-around items-center pb-20">
+            <div class="w-full max-w  shadow-md rounded px-8 pt-1 ">
               <form>
                 <div class="mb-4">
                  
@@ -146,7 +146,7 @@
                   <textarea class="shadow appearance-none border rounded  bg-black w-full py-20 px-3 pt-4 text-white leading-tight focus:outline-none focus:shadow-outline" id="message" placeholder="Enter your message"></textarea>
                 </div>
                 <div class="flex items-center justify-between">
-                    <button class="bg-[#fb153b] text-white px-5 py-2 rounded-sm  hover:bg-[#cdb2b6]">Hire me</button>
+                    <input type="submit" class="bg-[#fb153b] text-white px-5 py-2 rounded-sm  hover:bg-[#cdb2b6]">
                 </div>
               </form>
             </div>
