--- a/portifolio/index.html
+++ b/portifolio/index.html
@@ -155,7 +155,7 @@
         <div>
             <div class="flex justify-around flex-row px-0 py-10 gap-2 p-36">
                 <div>
-                    <a class="hover:text-[#fb153b]pl-20" href=""><i class="fa-brands fa-whatsapp text-xl font-bold"></i></a>
+                    <a class="hover:text-[#fb153b]pl-20" href="#"><i class="fa-brands fa-whatsapp text-xl font-bold"></i></a>
                     <p class="text-center">+250791348662</p>
                 </div>
                 <div>
