--- a/container/index.html
+++ b/container/index.html
@@ -66,7 +66,7 @@
             <li><a class="hover:text-[#fb153b] text-[#fb153b]" href="#Home">Home</a></li>
             <li><a class="hover:text-[#fb153b]" href="#About">About</a></li>
             <li><a class="hover:text-[#fb153b]" href="#Service">Service</a></li>
-            <li><a class="hover:text-[#fb153b]" href="#Service">portifolio</a></li>
+            <li><a class="hover:text-[#fb153b]" href="#project">project</a></li>
             <li><a class="hover:text-[#fb153b]" href="#Contact">Contact</a></li>
           </ul>
         </div>
@@ -152,7 +152,7 @@
       </section>
 
       <!-----------------------------section------------------------------------------------->
-      <section>
+      <section id="project">
         <div class="flex  justify-center items-center  gap-7 p-5 w-full  flex-wrap">
           <div class="w-[354px] px-5 py-8 ronded-lg border-purple-500 shadow-[#fb153b] cursor-pointer shadow-xl">
             <img src="scissors.png" alt class="w-[196px] mx-auto">
