--- a/container/index.html
+++ b/container/index.html
@@ -44,7 +44,7 @@
               <li><a class="hover:text-[#fb153b] text-[#fb153b]" href="#Home">Home</a></li>
               <li><a class="hover:text-[#fb153b]" href="#About">About</a></li>
               <li><a class="hover:text-[#fb153b]" href="#Service">Service</a></li>
-              <li><a class="hover:text-[#fb153b]" href="#Project">project</a></li>
+              <li><a class="hover:text-[#fb153b]" href="#project">project</a></li>
               <li><a class="hover:text-[#fb153b]" href="#Contact">Contact</a></li>
 
             </ul>
@@ -102,8 +102,7 @@
 
       <!------------------------------------------------------------------------About------------------------------------------------------------------>
       <section id="About">
-        <div
-          class="flex flex-col lg:flex-row justify-around items-center  mx-auto pt-10 lg:pt-28 pb-10 lg:pb-40 max-w-screen-xl">
+        <div class="flex flex-col lg:flex-row justify-around items-center  mx-auto pt-10 lg:pt-28 pb-10 lg:pb-40 max-w-screen-xl">
           <div class="w-96 lg:w-[40%] h-auto lg:h-96">
             <img src="about.jpeg" alt="about me image" class="w-full h-full object-cover">
           </div>
@@ -153,7 +152,7 @@
 
       <!-----------------------------section------------------------------------------------->
       <section id="project">
-        <div class="flex  justify-center items-center  gap-7 p-5 w-full  flex-wrap">
+        <div class="flex  justify-center items-center  gap-7 pt-40 w-full  flex-wrap">
           <div class="w-[354px] px-5 py-8 ronded-lg border-purple-500 shadow-[#fb153b] cursor-pointer shadow-xl">
             <img src="scissors.png" alt class="w-[196px] mx-auto">
             <h5 class="text-center my-5 text-x1">Graphic Design</h5>
@@ -165,21 +164,21 @@
           </div>
 
           <div class="w-[354px] px-5 py-8 ronded-lg border-purple-500 shadow-[#fb153b] cursor-pointer shadow-xl">
-            <img src="scissors.png" alt class="w-[196px] mx-auto">
+            <img src="calculator.png" alt class="w-[196px] mx-auto">
             <h5 class="text-center my-5 text-x1">Graphic Design</h5>
             <p class="text-justify">
-              rock,paper,scissors projects that is deployed.
+               small project to calculator age project and deployed
             </p>
-            <a href="https://uwinezaflorence20.github.io/rock_paper_scissor_app/" class="pl-28 text-[#fb153b] ">read
+            <a href="https://uwinezaflorence20.github.io/age_calculator/" class="pl-28 text-[#fb153b] ">read
               more</a>
           </div>
           <div class="w-[354px] px-5 py-8 ronded-lg border-purple-500 shadow-[#fb153b] cursor-pointer shadow-xl">
-            <img src="scissors.png" alt class="w-[196px] mx-auto">
+            <img src="image.png" alt class="w-[196px] mx-auto">
             <h5 class="text-center my-5 text-x1">Graphic Design</h5>
             <p class="text-justify">
               rock,paper,scissors projects that is deployed.
             </p>
-            <a href="https://uwinezaflorence20.github.io/rock_paper_scissor_app/" class="pl-28 text-[#fb153b] ">read
+            <a href="https://uwinezaflorence20.github.io/roll_dice_generator/" class="pl-28 text-[#fb153b] ">read
               more</a>
           </div>
         </div>
